--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -2,16 +2,22 @@
     font-family: "ErotiqueAlternate";
     src: url(./assets/ErotiqueAlternateTrial-Regular.woff) format("woff");
 }
+@font-face {
+    font-family: "VisbyRoundCF";
+    src: url(/assets/visbyroundcf-heavy.woff) format("woff");
+}
 body {
     margin: 0;
+    max-width: 100vw;
+    height: 100vh;
+    background-color: #7A7A7A;
 }
 a {
     text-decoration: none;
 }
 .container {
-    background-color: #7A7A7A;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow-y: auto;
 }
 .return {
@@ -34,8 +40,34 @@ a {
         margin-top: 50px;
     }
     #red {
-        margin-left: 141px;
-        margin-top: 200px;
+        position: absolute;
+        left: 141px;
+        top: 200px;
+        z-index: 99;
+    }
+    #blue {
+        position: absolute;
+        left: 438px;
+        top: 375px;
+        z-index: 99;
+    }
+    #yellow {
+        position: absolute;
+        top: 550px;
+        left: 812px;
+        z-index: 99;
+    }
+    #white {
+        position: absolute;
+        top: 77px;
+        left: 644px;
+        z-index: 99;
+    }
+    #black {
+        position: absolute;
+        top: 300px;
+        left: 1050px;
+        z-index: 99;
     }
     .item-img {
         position: absolute;
