--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -21,12 +21,14 @@ a {
     overflow-y: auto;
 }
 .return {
+    position: absolute;
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    margin-left: 30px;
-    margin-top: 30px;
+    left: 30px;
+    top: 30px;
     background-color: #E5E5E5;
+    z-index: 99;
 }
 
 @media only screen and (min-width: 600px) {
