--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: "VisbyRoundCF";
-    src: url(/assets/visbyroundcf-heavy.woff) format("woff");
+    src: url(./assets/visbyroundcf-heavy.woff) format("woff");
 }
 body {
     margin: 0;
